--- a/Week5-Homework/Andre-The-Giant/styles.css
+++ b/Week5-Homework/Andre-The-Giant/styles.css
@@ -25,7 +25,7 @@ div {
 }
 
 #bio {
-  float: right;
+  justify-content: flex-start;
 }
 #bio > li {
   padding: 2px;
@@ -36,3 +36,17 @@ div {
 }
 
 @media only screen and (min-device-width: 375px) and (max-device-width: 375px) and (min-device-height: 667px) and (max-device-height: 667px);
+
+#earlyCareer {
+  img {
+    max-width: 95%;
+    padding-top: 5px;
+  }
+}
+
+#proCareer {
+  img{
+    max-width: 95%;
+    padding-top: 5px;
+  }
+}
